@@ -1,0 +1,3 @@
+@base <http://example.org> .
+
+<instance> a <http://example.org/Thing> .
