@@ -1,8 +1,9 @@
 serd (0.30.1) unstable;
 
   * Fix GCC 4 build
+  * Fix resolving some URIs against base URIs with no trailing slash
 
- -- David Robillard <d@drobilla.net>  Mon, 23 Jul 2018 23:14:40 +0200
+ -- David Robillard <d@drobilla.net>  Mon, 30 Jul 2018 19:28:32 +0200
 
 serd (0.30.0) stable;
 
